# internal/adapters/delivery/docs/swagger.yaml
@@ -1,10 +1,10 @@
 basePath: /api
 definitions:
-  request.MultipleChoiceDTO:
+  request.QuestionDTO:
     properties:
       answer:
         type: string
-      content:
+      discipline:
         type: string
       id:
         type: string
@@ -33,6 +33,29 @@ definitions:
       message:
         type: string
     type: object
+  response.Question:
+    properties:
+      answer:
+        type: string
+      discipline:
+        type: string
+      id:
+        type: string
+      model:
+        type: string
+      options:
+        items:
+          type: string
+        type: array
+      organization:
+        type: string
+      question:
+        type: string
+      topic:
+        type: string
+      year:
+        type: string
+    type: object
 info:
   contact:
     email: deveduardomelo@gmail.com
@@ -42,6 +65,48 @@ info:
   version: "1.0"
 paths:
   /question:
+    delete:
+      consumes:
+      - application/json
+      description: Deleta todas as questões
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.InfoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - bearerAuth: []
+      summary: Deleta todas as questões
+      tags:
+      - Question
+    get:
+      consumes:
+      - application/json
+      description: Lista todas as questões
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/response.Question'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - bearerAuth: []
+      summary: Lista todas as questões
+      tags:
+      - Question
     post:
       consumes:
       - application/json
@@ -53,11 +118,11 @@ paths:
         name: question
         required: true
         schema:
-          $ref: '#/definitions/request.MultipleChoiceDTO'
+          $ref: '#/definitions/request.QuestionDTO'
       produces:
       - application/json
       responses:
-        "200":
+        "201":
           description: Questão criada com sucesso
           schema:
             $ref: '#/definitions/response.InfoResponse'
@@ -68,6 +133,89 @@ paths:
       security:
       - bearerAuth: []
       summary: Cria uma questão de múltipla escolha
+      tags:
+      - Question
+  /question/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deleta uma questão
+      parameters:
+      - description: ID da questão
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.InfoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - bearerAuth: []
+      summary: Deleta uma questão
+      tags:
+      - Question
+  /question/{organization}:
+    get:
+      consumes:
+      - application/json
+      description: Lista todas as questões de uma organização
+      parameters:
+      - description: Nome da organização
+        in: path
+        name: organization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/response.Question'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - bearerAuth: []
+      summary: Lista todas as questões de uma organização
+      tags:
+      - Question
+  /question/import:
+    post:
+      consumes:
+      - application/json
+      description: Importa questões de múltipla escolha a partir de um arquivo CSV
+      parameters:
+      - description: Arquivo CSV com as questões de múltipla escolha
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.InfoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - bearerAuth: []
+      summary: Importa questões de múltipla escolha
       tags:
       - Question
 securityDefinitions:
